# RobotCook

./: .pre-commit-config.yaml  README.md  adapter_aiohttp.py  adapter_asyncio.py  adapter_fastapi.py  adapter_flask.py  adapter_rabbitmq.py  chef.py  cnc.py  controller.py  database.py  dispenser.py  dosator.py  errors  errors.py  fastapi.py  hardware.py  manipulator.py  models.py  processing_center.py  pyproject.toml  recipes.csv  requirements.txt  schemas.py  souce.py  tools.py
app/tests/: conftest.py
app/tests/v1/functional/: test_recipe.py
app/tests/v1/unit/: test_aiohttp.py  test_asyncio.py  test_center.py  test_chief.py  test_controller.py  test_dosator.py  test_fastapi.py  test_flask.py  test_rabbitmq.py  test_tool.py
app/v1/: chef.py  controller.py  database.py  dispenser.py  errors.py  hardware.py  models.py  processing_center.py  schemas.py  tools.py
app/v1/adapters/: adapter_aiohttp.py  adapter_asyncio.py  adapter_fastapi.py  adapter_flask.py  adapter_rabbitmq.py
datas/: recipes.csv
docs/: README.md  diagram.erd
tests/: conftest.py
tests/functional/: test_recipe.py
tests/unit/: test_aiohttp.py  test_asyncio.py  test_center.py  test_chief.py  test_controller.py  test_dosator.py  test_fastapi.py  test_flask.py  test_rabbitmq.py  test_tool.py
