[tool.poetry]
name = "robotcook"
version = "2"
description = ""
authors = ["Vladimir Sp <trokbrok@yandex.by>"]

[tool.poetry.dependencies]
python = "^3.10"
SQLAlchemy = "^1.4.41"
fastapi = "^0.85.0"
Flask = {extras = ["async"], version = "^2.2.2"}
Flask-SQLAlchemy = "^2.5.1"
aiohttp = "^3.8.3"
pytest-aiohttp = "^1.0.4"
pika = "^1.3.0"
pytest-rabbitmq = "^2.2.1"
requests = "^2.28.1"
asyncio = "^3.4.3"
pytest-asyncio = "^0.19.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
